2000-07-04  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/parser-smi.y: fixed line numbers of object, type, and
	macro definitions to be the first line of the defining SMI
	statement.

	* lib/check.c: Bill Fenner contributed a patch that fixes
	the location of complained identifiers if they are imported.

2000-06-28  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.4.tar.gz: released version 0.2.4.

	* lib/smi.h.in: added more library version information.

	* tools/dump-jax.c (dumpEntry): added entry get methods for
	index elements. Thanks to Sven.

	* mibs/ietf/IF-MIB: updated (RFC 2863).

	* mibs/ietf/IF-INVERTED-STACK-MIB: added (RFC 2864).

2000-06-21  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/HCNUM-TC: added (RFC 2856).

	* tools/dump-xmp.c: Juergen updated the XML dump format.

	* lib/scanner-smi.l: Fixed scanning of module files ending
	without a newline.

	* win/: Juergen changed some win things.

2000-06-20  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* mibs/ietf/RFC-1212: fixed recursive import.

	* lib/check.c: Juergen added various checks for INDEX clauses.

	* lib/check.c: added various checks for range and size restrictions.

2000-06-19  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* lib/smi.c (smiReadConfig): Fixed path separator when path
	values from the configuration file get concatenated.

	* mibs/ietf/: Fixed some imports.

	* win/makefile.vc: Minor fixes. Thanks to Yigal Hochberg.

2000-06-18  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.3.tar.gz: released version 0.2.3.

	* Makefile.am: added the win/ directory to the distribution.

2000-06-16  Frank Strauss  <strauss@ibr.cs.tu-bs.de>

	* libsmi-0.2.2.tar.gz: released version 0.2.2.

	* Juergen sent a huge patch: moved parser checks to a separate
        C file, aligned error messages, aligned identifier prefixes,
        aligned MIB test suite.

	* mibs/ietf/INET-ADDRESS-MIB: added (RFC 2851).

2000-06-15  Frank Strauss  <strauss@ibr.cs.tu-bs.de>
